--- a/main.html
+++ b/main.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Liquid Button</title>
+        <title>Menu Animation Hover</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="Button.ico">
     </head>
     <body>
-        <a href="https://github.com/badal-ag">
-            <span>Github</span>
-            <div class="liquid"></div>
-        </a>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Profile</a>
+            <a href="#">Contact</a>
+            <div class="animation start-home"></div>
+        </nav>
     </body>
 </html>
